--- a/index.html
+++ b/index.html
@@ -13,111 +13,111 @@
 
 <!-- Site Header function-->
 <body>
-    <div class="header">
+    <section class="header">
         <!-- h1 tag is used for the most important/main heading -->
         <h1>HORI<span class="seo">SEO</span>N</h1>
-        <div>
+        <nav>
             <!-- Creating 3 links within the header (Search Engine Optimization, Online Reputation Management, and Social Media Marketing) -->
             <ul>
-                <li>
-                    <!-- Separate <li> functions are used for spacing, but aren't completely necessary -->
-                        <!-- Header looks "cleaner" with them, so I kept each <li> function for each link -->
-                    <li>
+                <link>
+                    <!-- Separate <links> functions are used for spacing, but aren't completely necessary -->
+                        <!-- Header looks "cleaner" with them, so I kept each <links> function for each link -->
+                    <link>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
-                    </li>
-                    <li>
+                    </link>
+                    <link>
                     <a href="#online-reputation-management">Online Reputation Management</a>
-                    </li>
-                    <li>
+                    </link>
+                    <link>
                     <a href="#social-media-marketing">Social Media Marketing</a>
-                    </li>
-                </li>
+                    </link>
+                </link>
             </ul>
-        </div>
-    </div>
+        </nav>
+    </section>
     <!-- Defining function for digital-marketing-meeting.jpg pic -->
-    <div class="hero"></div>
+    <section class="hero"></section>
     <!-- Defining function "website anchor boxes" for website links inside header   -->
-    <div class="content">
+    <section class="content">
         <!-- Defining Search Engine Optimization (SEO) function -->
-        <div class="search-engine-optimization">
+        <article class="search-engine-optimization">
             <!-- image link -->
-            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
+            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="SEO Notes in Notebook"/>
             <!-- SEO header: Note <h2> function is not main heading <h1> -->
             <h2>Search Engine Optimization</h2>
             <!-- Creating paragraph within SEO function -->
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
-        </div>
+        </article>
         <!-- Defining Online Reputation Management (ORM) function -->
-        <div id="online-reputation-management" class="online-reputation-management">
+        <article id="online-reputation-management" class="online-reputation-management">
             <!-- image link -->
-            <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
+            <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="Laptop on a Desk"/>
             <!-- ORM header: Note <h2> function.  Same as SEO header. -->
             <h2>Online Reputation Management</h2>
             <!-- Creating paragraph within ORM function -->
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
-        </div>
+        </article>
         <!-- Defining Social Media Marketing (SMM) function -->
-        <div id="social-media-marketing" class="social-media-marketing">
+        <article id="social-media-marketing" class="social-media-marketing">
             <!-- image link -->
-            <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
+            <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="Bubble Thoughts in a Meeting"/>
             <!-- SMM header: Same <h2> funtion as previous 2 headers -->
             <h2>Social Media Marketing</h2>
             <!-- Creating paragraph within SMM function -->
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
-        </div>
-    </div>
+        </article>
+    </section>
     <!-- Defining function for "website side boxes" featuring separate text and images from our "website anchor boxes" -->
-    <div class="benefits">
+    <section class="benefits">
         <!-- Defining Lead Generation function -->
-        <div class="benefit-lead">
+        <article class="benefit-lead">
             <!-- Lead Generation header: Note <h3> function is not main <h1> or secondary <h2> heading -->
             <h3>Lead Generation</h3>
             <!-- image link -->
-            <img src="./assets/images/lead-generation.png" />
+            <img src="./assets/images/lead-generation.png" alt="Arrow Pointing to a Dollar Sign"/>
             <!-- Creating paragraph within Lead Generation function -->
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
-        </div>
+        </article>
         <!-- Defining Brand Awareness function -->
-        <div class="benefit-brand">
+        <article class="benefit-brand">
             <!-- Brand Awareness header: Same as Lead Generation heading -->
             <h3>Brand Awareness</h3>
             <!-- image link -->
-            <img src="./assets/images/brand-awareness.png" />
+            <img src="./assets/images/brand-awareness.png" alt="Light Bulb on a Body Instead of a Head"/>
             <!-- Creating paragraph within Brand Awareness function -->
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
-        </div>
+        </article>
         <!-- Defining Cost Management function -->
-        <div class="benefit-cost">
+        <article class="benefit-cost">
             <!-- Cost Management header: Same <h3> function as previous 2 headers -->
             <h3>Cost Management</h3>
             <!-- image link -->
-            <img src="./assets/images/cost-management.png"></img>
+            <img src="./assets/images/cost-management.png" alt="Multiple Dollar Signs"></img>
             <!-- Creating paragraph within Cost Management function -->
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
-        </div>
-    </div>
+        </article>
+    </section>
     <!-- Site Footer function -->
-    <div class="footer">
+    <foot class="footer">
         <!-- Footer heading -->
         <h2>Made with ❤️️ by Horiseon</h2>
         <!-- Footer text -->
         <p>
             &copy; 2023 Horiseon Social Solution Services, Inc.
         </p>
-    </div>
+    </foot>
 </body>
 
 </html>
